@startuml
class AlbumTrack extends AudioTrack {
  #album: string
  #numeroPiste: int
  +__construct(titre: string, nomFichier: string)
  +jsonSerialize(): array
}

class PodcastTrack extends AudioTrack {
  +__construct(titre: string, nomFichier: string)
}

interface JsonSerializable {
    +jsonSerialize(): array
}

class AudioTrack implements JsonSerializable {
  #titre: string
  #auteur: string
  #genre: string
  #nomFichier: string
  #date: int
  #duree: int
  +__construct(titre: string, nomFichier: string)
  +__toString(): String
  +__get(name: string): mixed
  +__set(name: string, value: mixed)
  +jsonSerialize(): array
}

interface Renderer {
  +COMPACT=1
  +LONG=2
  +render(selector: int): string
}

class AudioTrackRenderer implements Renderer {
  +__construct(AudioTrack)
  +render(selector: int): string
  -renderCompact(): string
  #renderLong(): string
}

class AlbumTrackRenderer extends AudioTrackRenderer {
  +__construct(AlbumTrack)
  #renderLong(): string
}

class PodcastRenderer extends AudioTrackRenderer {
  +__construct(PodcastTrack)
}

class AudioList {
  -nom: string
  #nbPistes: int
  #dureeTotale: int
  +__construct(nom: string, pistes: ?array)
  +__get(name: string): mixed
}

class Album extends AudioList {
  -artiste: string
  -dateSortie: int
  +__construct(nom: string, pistes: array)
  +__set(name: string, value: int|string)
}

class Playlist extends AudioList {
  +ajouterPiste(AudioTrack)
  +ajouterPistes(pistes: array)
  +retirerPiste(AudioTrack)
}

class AudioListRenderer implements Renderer {
  +__construct(AudioList)
  +render(selector: int): string
}

exception Exception
exception InvalidPropertyNameException extends Exception
exception InvalidPropertyValueException extends Exception

AudioTrackRenderer "1"--> "1" AudioTrack: "#audioTrack"
AudioListRenderer "1"--> "1" AudioList: "-audioList"
AudioList "*" -left-> "*" AudioTrack: "-pistes"

note right of Album::__set
  modifie seulement l'artiste et la date de sortie
end note
@enduml